# ChatBot

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  chat-bot.service  pyproject.toml
src/chat_bot/: __init__.py  __main__.py  api_client.py  config.py  email_sender.py  mcp_server.py  milestones.py  state.py  stats.py  urls.py
src/chat_bot/cogs/: __init__.py  alerts.py  commands.py  digest.py  github_feed.py  listener.py  mc.py  starboard.py  weekly.py  welcome.py
tests/: test_alert_server.py  test_api_client.py  test_community_feed.py  test_config.py  test_digest.py  test_email_sender.py  test_listener_skip.py  test_milestones.py  test_starboard.py  test_url_regex.py  test_welcome.py
